[workspace.package]
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
repository = "https://github.com/shipsimfan/lib-i18n"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
fluent.path = "fluent"
fluent-macro.path = "fluent-macro"
locale.path = "locale"
translation.path = "translation"

[package]
name = "i18n"
description = "Framework for internationalization"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["std", "current", "fluent-macro"]

alloc = ["locale/alloc", "translation/alloc"]
std = ["alloc", "locale/std", "translation/std", "fluent?/std"]
current = ["locale/current", "translation/current"]
fluent = ["alloc", "dep:fluent"]
fluent-macro = ["dep:fluent-macro"]

[dependencies]
fluent = { workspace = true, optional = true }
fluent-macro = { workspace = true, optional = true }
locale.workspace = true
translation.workspace = true
