[workspace.package]
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
repository = "https://github.com/shipsimfan/lib-i18n"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
i18n-fluent.path = "fluent"
i18n-fluent-macro.path = "fluent-macro"
i18n-locale.path = "locale"
i18n-translation.path = "translation"

[package]
name = "i18n"
description = "Framework for internationalization"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["std", "current", "fluent-macro"]

alloc = ["i18n-locale/alloc", "i18n-translation/alloc"]
std = ["alloc", "i18n-locale/std", "i18n-translation/std", "i18n-fluent?/std"]
current = ["i18n-locale/current", "i18n-translation/current"]
fluent = ["alloc", "dep:i18n-fluent"]
fluent-macro = ["dep:i18n-fluent-macro"]

[dependencies]
i18n-fluent = { workspace = true, optional = true }
i18n-fluent-macro = { workspace = true, optional = true }
i18n-locale.workspace = true
i18n-translation.workspace = true
