[package]
name = "i18n-locale"
description = ""

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
alloc = []
std = ["alloc"]
current = ["std", "dep:win32"]

[target.'cfg(windows)'.dependencies]
win32 = { git = "https://github.com/shipsimfan/lib-win32", optional = true }
