[package]
name = "i18n-translation"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
alloc = ["i18n-locale/alloc"]
std = ["alloc", "i18n-locale/std"]
current = ["std", "i18n-locale/current"]

[dependencies]
i18n-locale.workspace = true
